# xbd-damage-segmentation

./: .gitignore  README.md  pyproject.toml  requirements-prep.txt  requirements.txt
configs/: bafunet.yaml  base.yaml  fusion_unet.yaml  resunet_pp.yaml  smoke.yaml  unet.yaml
configs/_ablation/: bafunet_ablation_d1.yaml  bafunet_ablation_d2.yaml  bafunet_ablation_d3.yaml
notebooks/: demo.ipynb  train_full.ipynb
results/: ablation.csv  main_comparison.csv
results/errors_bafunet_resnet34/: by_disaster.csv  per_tile.csv  summary.json
results/errors_fusion_unet_resnet34/: by_disaster.csv  per_tile.csv  summary.json
results/errors_resunet_pp_resnet34/: by_disaster.csv  per_tile.csv  summary.json
results/errors_unet_resnet34/: by_disaster.csv  per_tile.csv  summary.json
scripts/: error_analysis.py  evaluate.py  run_ablation.py  sanity_check.py  smoke_all.py  visualize_predictions.py
src/data/: dataset.py  prepare_xbd.py
src/models/: __init__.py  _blocks.py  custom_seg.py  registry.py  unet_smp.py
src/training/: augmentations.py  checkpoint.py  losses.py  metrics.py  plots.py  train.py
src/utils/: device.py  logging.py  seed.py
