[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbd-damage-segmentation"
version = "0.1.0"
description = "Damage segmentation on xBD for semantic consistency verification"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
